--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -72,7 +72,7 @@
             Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Theme by <a href="http://baixin.io/">leopardpan</a> |
             <iframe
                 style="margin-left: 2px; margin-bottom:-5px;"
-                frameborder="0" scrolling="0" width="91px" height="20px"
+                frameborder="0" scrolling="0" height="20px"
                 src="https://ghbtns.com/github-btn.html?user=gjgj821&type=follow&count=true" >
             </iframe>
             </p>
