--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -77,9 +77,9 @@
             </iframe>
             </p>
         	<div align="right">
-    			<link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
+            <a href="http://www.miitbeian.gov.cn" target="_blank">沪ICP备13012698号-1</a>
+    			  <link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css">
+          </div>
         </div>
-        <div>
     </footer>
 </section>
