--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -7,11 +7,11 @@
     var cloudTieConfig = {
       url: document.location.href, 
       sourceId: "",
-      productKey: "aa395cf7778f458492060f3f53301b7c",
+      productKey: "d9df8b768a8c46a7ab17528ab3729720",
       target: "cloud-tie-wrapper"
     };
     var yunManualLoad = true;
-    Tie.loader("", true);
+    Tie.loader("aHR0cHM6Ly9hcGkuZ2VudGllLjE2My5jb20vcGMvbGl2ZXNjcmlwdC5odG1s", true);
     </script>
 
 
